# BuildWatcher

./: KONZEPT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
scripts/: release.mjs
src/: App.tsx  config.ts  monitor.ts  notify.ts  styles.css  tray.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BuildDetails.tsx  Connections.tsx  Dashboard.tsx  Repos.tsx  Settings.tsx
src/providers/: github.ts  gitlab.ts  index.ts
