[package]
name = "buildwatcher"
version = "0.1.0"
description = "Build monitoring tray app for GitHub and GitLab"
edition = "2021"

[lib]
name = "buildwatcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
